# SCIPpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  _l_i_c_e_n_s_e_source.html  annotated.html  annotated_dup.js  changelog.md  classes.html  classscippp_1_1_constant_coefficient-members.html  classscippp_1_1_constant_coefficient.html  classscippp_1_1_constant_coefficient.js  classscippp_1_1_initial_solution-members.html  classscippp_1_1_initial_solution.html  classscippp_1_1_initial_solution.js  classscippp_1_1_lin_expr-members.html  classscippp_1_1_lin_expr.html  classscippp_1_1_lin_expr.js  classscippp_1_1_lin_ineq-members.html  classscippp_1_1_lin_ineq.html  classscippp_1_1_lin_ineq.js  classscippp_1_1_model-members.html  classscippp_1_1_model.html  classscippp_1_1_model.js  code_of_conduct.md  codecov.yml  conanfile.py  constant__coefficient_8hpp_source.html  deprecated.html  dir_3ebff774ad6caa8f79000c9004598499.html  dir_3ebff774ad6caa8f79000c9004598499.js  dir_3ebff774ad6caa8f79000c9004598499_dep.map  dir_3ebff774ad6caa8f79000c9004598499_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  (+498 more)
.github/workflows/: main.yml  pages.yml
include/scippp/: constant_coefficient.hpp  iis.hpp  initial_solution.hpp  lin_expr.hpp  lin_ineq.hpp  model.hpp  param.hpp  parameters.hpp  solution.hpp  solving_statistics.hpp  statistics.hpp  var.hpp  var_type.hpp  version.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_0.js  (+48 more)
source/: initial_solution.cpp  lin_expr.cpp  lin_ineq.cpp  model.cpp  var.cpp  version.cpp.in
test/: CMakeLists.txt  examples.cpp  main.cpp  test_add_var.cpp  test_iis.cpp  test_initial_solution.cpp  test_io.cpp  test_linexpr.cpp  test_objscip.cpp  test_var.cpp
utils/: CMakeLists.txt  extract_solvingstats.py  gen_constexpr_parameters.cpp  requirements.txt
